# json-api

./: .codeclimate.yml  .gitignore  LICENSE  README.md  circle.yml  json-api.cabal  package.yaml  pbcopy  stack.yaml
example/: LICENSE  README.md  example.cabal  stack.yaml
example/src/: Emails.hs  Lib.hs  Users.hs
example/src/Users/: Controller.hs
example/src/Users/Actions/: Index.hs  Show.hs
src/: JsonApi.hs  Link.hs  ResourceObject.hs
src/Network/: Error.hs  JSONApi.hs  JsonApi.hs  Link.hs  Meta.hs  ResourceObject.hs
src/Network/JSONApi/: Document.hs  Error.hs  Identifier.hs  JsonApi.hs  Link.hs  Meta.hs  Pagination.hs  Resource.hs  ResourceObject.hs  Source.hs
src/Network/JSONApi/Document/: Error.hs  Success.hs
test/: JsonApiSpec.hs  ResourceObjectSpec.hs  TestHelpers.hs
test/Network/: ErrorSpec.hs  JsonApiSpec.hs  MetaSpec.hs  ResourceObjectSpec.hs
test/Network/JSONApi/: DocumentSpec.hs  ErrorSpec.hs  IdentifierSpec.hs  JsonApiSpec.hs  MetaSpec.hs  PaginationSpec.hs  ResourceObjectSpec.hs  ResourceSpec.hs  SourceSpec.hs
