name:                json-api
version:             0.1.0.0
synopsis:            Provides utilities for deriving JSON payloads conformant to the json-api specification
description:         Please see README.md
homepage:            https://github.com/toddmohney/json-api#readme
license:             MIT
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       aeson
                     , base >= 4.7 && < 5.0
                     , containers >= 0.5.6.2 && < 0.5.7.1
                     , text
                     , lens
                     , lens-aeson >= 1.0.0.5 && < 1.0.1.0
                     , url >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  exposed-modules:     Network.JsonApi
                     , Network.Meta

  ghc-options:        -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

  hs-source-dirs:      src

  other-modules:       Network.Link
                     , Network.ResourceObject

test-suite json-api-test
  build-depends:       aeson
                     , aeson-pretty >= 0.7.2 && < 0.8.0
                     , base
                     , bytestring >= 0.10.6.0 && < 0.10.7.0
                     , containers >= 0.5.6.2 && < 0.5.7.1
                     , hspec
                     , json-api
                     , lens
                     , lens-aeson >= 1.0.0.5 && < 1.0.1.0
                     , text
                     , url >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

  hs-source-dirs:      test

  main-is:             Spec.hs

  other-modules:       Network.JsonApiSpec
                     , Network.ResourceObjectSpec

  type:                exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/toddmohney/json-api
