name:                json-api
version:             0.1.0.0
synopsis:            Provides utilities for deriving JSON payloads conformant to the json-api specification
description:         Please see README.md
homepage:            https://github.com/toddmohney/json-api#readme
license:             MIT
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:   aeson                >= 0.11.2.0 && < 0.11.3.0
                 , base                 >= 4.7 && < 5.0
                 , containers           >= 0.5.6.2 && < 0.5.7.1
                 , data-default         >= 0.5.3 && < 5.6.0
                 , lens-aeson           >= 1.0.0.5 && < 1.0.1.0
                 , swagger2             >= 2.0.2 && < 2.1.0
                 , text                 >= 1.2.2.1 && < 1.2.3.0
                 , unordered-containers >= 0.2.7.1 && < 0.2.8.0
                 , url                  >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  exposed-modules:
    Network.JSONApi.Error
    Network.JSONApi.Document
    Network.JSONApi.Meta

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs: src

  other-modules:
    Network.JSONApi.Link
    Network.JSONApi.ResourceObject

test-suite json-api-test
  build-depends:   aeson        >= 0.11.2.0 && < 0.11.3.0
                 , aeson-pretty >= 0.7.2 && < 0.8.0
                 , base         >= 4.7 && < 5.0
                 , bytestring   >= 0.10.6.0 && < 0.10.7.0
                 , containers   >= 0.5.6.2 && < 0.5.7.1
                 , data-default >= 0.5.3 && < 5.6.0
                 , hspec        >= 2.2.3 && < 2.3.0
                 , json-api
                 , lens         >= 4.13 && < 5.0
                 , lens-aeson   >= 1.0.0.5 && < 1.0.1.0
                 , text         >= 1.2.2.1 && < 1.2.3.0
                 , url          >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules:
    Network.JSONApi.ErrorSpec
    Network.JSONApi.DocumentSpec
    Network.JSONApi.MetaSpec
    Network.JSONApi.ResourceObjectSpec
    TestHelpers

  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/toddmohney/json-api
