name:                json-api
version:             0.1.2.0
homepage:            https://github.com/toddmohney/json-api
bug-reports:         https://github.com/toddmohney/json-api/issues
license:             MIT
license-file:        LICENSE
author:              Todd Mohney
maintainer:          Todd Mohney <toddmohney@gmail.com>
copyright:           2016 Todd Mohney
category:            Network
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
tested-with:         GHC == 7.10.3
synopsis:            Utilities for generating JSON-API payloads
description:
  Provides utilities for deriving JSON payloads conformant to the json-api
  specification

extra-source-files:
  README.md
  LICENSE
  circle.yml
  stack.yaml
  example/LICENSE
  example/README.md
  example/example.cabal
  example/*.hs
  example/stack.yaml

source-repository head
  type: git
  location: https://github.com/toddmohney/json-api.git

library
  build-depends: aeson                >= 0.11.2.0 && < 0.11.3.0
               , base                 >= 4.7 && < 5.0
               , containers           >= 0.5.7.1 && < 0.5.8.0
               , data-default         >= 0.5.3 && < 5.6.0
               , lens                 >= 4.13 && < 5.0
               , lens-aeson           >= 1.0.0.5 && < 1.0.1.0
               , text                 >= 1.2.2.1 && < 1.2.3.0
               , unordered-containers >= 0.2.7.1 && < 0.2.8.0
               , url                  >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

  exposed-modules:
    Network.JSONApi
    Network.JSONApi.Error
    Network.JSONApi.Document
    Network.JSONApi.Identifier
    Network.JSONApi.Meta
    Network.JSONApi.Link
    Network.JSONApi.Resource
    Network.JSONApi.Pagination

  other-modules:

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports

  hs-source-dirs: src

test-suite json-api-test
  build-depends: aeson        >= 0.11.2.0 && < 0.11.3.0
               , aeson-pretty >= 0.7.2 && < 0.8.0
               , base         >= 4.7 && < 5.0
               , bytestring   >= 0.10.8.1 && < 0.10.9.0
               , containers   >= 0.5.7.1 && < 0.5.8.0
               , data-default >= 0.5.3 && < 5.6.0
               , hspec        >= 2.2.3 && < 2.3.0
               , json-api
               , lens         >= 4.13 && < 5.0
               , lens-aeson   >= 1.0.0.5 && < 1.0.1.0
               , text         >= 1.2.2.1 && < 1.2.3.0
               , unordered-containers >= 0.2.7.1 && < 0.2.8.0
               , url          >= 2.1.3 && < 2.2.0

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules:
    Network.JSONApi.ErrorSpec
    Network.JSONApi.DocumentSpec
    Network.JSONApi.IdentifierSpec
    Network.JSONApi.MetaSpec
    Network.JSONApi.PaginationSpec
    Network.JSONApi.ResourceSpec
    TestHelpers

  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/toddmohney/json-api
