name:                example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/example#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Lib
    Users
    Users.Controller

  other-modules:
    Users.Actions.Index
    Users.Actions.Show

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , data-default
                     , json-api
                     , servant-server
                     , text
                     , url
                     , wai
                     , warp
  default-language:    Haskell2010

  default-extensions:
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010

test-suite example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/example
