name:                example
version:             0.1.0.3
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/example#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Lib
    Emails
    Users
    Users.Controller

  other-modules:
    Users.Actions.Index
    Users.Actions.Show

  build-depends: base           >= 4.7 && < 5
               , aeson          >= 0.11.2.0 && < 0.11.3.0
               , containers     >= 0.5.7.1 && < 0.5.8.0
               , data-default   >= 0.5.3 && < 5.6.0
               , json-api
               , servant-server >= 0.7.1 && < 0.8.0
               , text           >= 1.2.2.1 && < 1.2.3.0
               , url            >= 2.1.3 && < 2.2.0
               , wai            >= 3.2.1.1 && < 3.2.2.0
               , warp

  default-language:    Haskell2010

  default-extensions:
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports

executable example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010
