name:                example
version:             0.1.0.4
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/example#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Lib
    Emails
    Users
    Users.Controller

  other-modules:
    Users.Actions.Index
    Users.Actions.Show

  build-depends: base           >= 4.7 && < 5
               , aeson
               , containers
               , data-default
               , json-api
               , servant-server
               , text
               , url
               , unordered-containers
               , wai
               , warp

  default-language:    Haskell2010

  default-extensions:
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports

executable example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010
